<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/flashcard_question"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/orange"
        android:text="@string/Question_1"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/flashcard_answer"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/teal_700"
        android:text="@string/Answer_1"
        android:textAlignment="center"
        android:textSize="40sp"
        android:visibility="invisible" />

    <androidx.appcompat.widget.AppCompatTextView

        android:id="@+id/option1"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flashcard_question"
        android:layout_marginTop="42dp"
        android:background="@color/orange"
        android:text="@string/option1text"
        android:textAlignment="center"
        android:textColor="#5D4037"
        android:textSize="34sp"
        android:visibility="invisible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/option2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/option1"
        android:layout_marginTop="38dp"
        android:background="@color/orange"
        android:text="@string/option2text"
        android:textAlignment="center"
        android:textColor="#5D4037"
        android:textSize="34sp"
        android:visibility="invisible" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/option3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/option2"
        android:layout_marginTop="46dp"
        android:background="@color/orange"
        android:text="@string/option3text"
        android:textAlignment="center"
        android:textColor="#5D4037"
        android:textSize="34sp"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/answers_visible_toggle"
        android:layout_width="75dp"
        android:layout_height="77dp"
        android:layout_below="@id/option3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="168dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="168dp"
        app:srcCompat="@drawable/see_answers"
        tools:ignore="ImageContrastCheck" />


</RelativeLayout>